tests/errors/cLayoutNoSuchType.milo
// @error: a declaration does not match the C header it claims to describe
@cLayout("struct nosuchtype", "time.h")
extern struct T {
    a: i64,
}

fn main() {
    print(sizeOf<T>())
}
